# Cmake

./: README.md
demo/: CMakeLists.txt  CTestConfig.cmake  Config.cmake.in  Demo-1.2.0-Linux.tar.Z  MultiCPackConfig.cmake  command.txt  config.h.in  main.cpp
demo/MathFunctions/: CMakeLists.txt  math_func.cpp  my_sqrt.cpp  my_sqrt.h
demo/_CPack_Packages/Linux/STGZ/: Demo-1.2.0-Linux.sh
demo/_CPack_Packages/Linux/STGZ/Demo-1.2.0-Linux/lib/: libMathd.so.1.0.0
demo/_CPack_Packages/Linux/STGZ/Demo-1.2.0-Linux/lib/cmake/Math/: MathTargets-release.cmake
demo/_CPack_Packages/Linux/TGZ/Demo-1.2.0-Linux/include/: config.h
demo/_CPack_Packages/Linux/TGZ/Demo-1.2.0-Linux/lib/: libMath.so.1.0.0
demo/_CPack_Packages/Linux/TZ/Demo-1.2.0-Linux/lib/: libMath.so.1  libMathd.so.1
demo/_CPack_Packages/Linux/TZ/Demo-1.2.0-Linux/lib/cmake/Math/: MathConfig.cmake
demo/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Table  cmake_install.cmake  install_manifest.txt  resd
demo/debug/MathFunctions/: Makefile  cmake_install.cmake
demo/install/lib/: libMath.so.1.0.0
demo/install/lib/cmake/Math/: MathTargets-noconfig.cmake
demo/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Table  cmake_install.cmake  install_manifest.txt  res
demo/release/MathFunctions/: Makefile  cmake_install.cmake
install/include/: TutorialConfig.h
step1/: CMakeLists.txt  TutorialConfig.h.in
step10/: CMakeLists.txt
step10/MathFunctions/: CMakeLists.txt
step10_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial  cmake_install.cmake
step10_build/MathFunctions/: Makefile  cmake_install.cmake
step11/: CMakeLists.txt  tutorial.cxx
step11/MathFunctions/: CMakeLists.txt
step11_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  MakeTable  Makefile  Tutorial  cmake_install.cmake  install_manifest.txt
step11_build/MathFunctions/: Makefile  cmake_install.cmake
step11_build/Testing/Temporary/: CTestCostData.txt
step12/: CMakeLists.txt  License.txt  Tutorial-1.0-Linux.sh  Tutorial-1.0-Linux.tar.Z
step12/MathFunctions/: CMakeLists.txt
step12/_CPack_Packages/Linux/STGZ/Tutorial-1.0-Linux/lib/cmake/MathFunctions/: MathFunctionsTargets.cmake
step12/_CPack_Packages/Linux/TGZ/Tutorial-1.0-Linux/lib/: libMathFunctionsd.so.1.0.0
step12/_CPack_Packages/Linux/TZ/Tutorial-1.0-Linux/lib/: libMathFunctions.so.1.0.0
step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  MakeTable  Makefile  Tutoriald  cmake_install.cmake  install_manifest.txt
step12/debug/MathFunctions/: Makefile  cmake_install.cmake
step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  MakeTable  Makefile  Tutorial  cmake_install.cmake  install_manifest.txt
step12/release/MathFunctions/: Makefile  cmake_install.cmake
step1_build/: CMakeCache.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
step2/MathFunctions/: CMakeLists.txt
step2_build/: CMakeCache.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
step2_build/MathFunctions/: Makefile  cmake_install.cmake
step3/: CMakeLists.txt  tutorial.cxx
step3/MathFunctions/: CMakeLists.txt
step3_build/: CMakeCache.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
step3_build/MathFunctions/: Makefile  cmake_install.cmake
step4/: CMakeLists.txt
step4_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
step4_build/MathFunctions/: Makefile  cmake_install.cmake
step4_build/Testing/Temporary/: CTestCostData.txt
step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
step5_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
step5_build/MathFunctions/: Makefile  cmake_install.cmake
step6/: CMakeLists.txt  tutorial.cxx
step6/MathFunctions/: CMakeLists.txt  mysqrt.cxx
step6_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
step6_build/MathFunctions/: MakeTable  Makefile  cmake_install.cmake
step7/: CMakeLists.txt
step7_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial-1.0-Linux.tar.Z  cmake_install.cmake  install_manifest.txt
step7_build/MathFunctions/: Makefile  cmake_install.cmake
step7_build/_CPack_Packages/Linux/STGZ/: Tutorial-1.0-Linux.sh
step8/: CMakeLists.txt
step8_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
step8_build/MathFunctions/: Makefile  cmake_install.cmake
step8_build/Testing/: TAG
step8_build/Testing/20220805-0741/: Build.xml  Configure.xml  Done.xml  Test.xml
step8_build/Testing/Temporary/: CTestCostData.txt
step9/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
step9/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
step9_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial  cmake_install.cmake  install_manifest.txt
step9_build/MathFunctions/: Makefile  cmake_install.cmake
step9_build/Testing/Temporary/: CTestCostData.txt
test/: CMakeLists.txt  main.cxx
